assets/css/main.css
/* ... */
.bteam .overlay {
    background: url("../img/slide_bg.png") repeat scroll 0 0 transparent;
    padding: 150px 0 150px;
}


#team{

  color: #313437;
background-color: #eef4f7;
}

#team .box {
    text-align: center;
    padding: 30px;
    padding-top: 1px;
    background-color: #fff;
    margin-bottom: 30px;
}



#team .name {
    font-weight: bold;
    margin-top: 28px;
    margin-bottom: 8px;
    color: inherit;
}

#team .title {
    text-transform: uppercase;
    font-weight: bold;
    color: #a0a0a0;
    letter-spacing: 2px;
    font-size: 13px;
}


#process .features .item {
    min-height: 100px;
    padding-left: 80px;
    margin-bottom: 40px;
}

#process .features .item .icon {
    font-size: 40px;
    color: #252525;
    float: left;
    margin-left: -65px;
}

#process .features .item .name {
    font-size: 20px;
    text-transform: uppercase;
    /*font-weight: bold;*/
    margin-top: 0;
    margin-bottom: 20px;

}

#process .features .item .description  {
    font-weight: medium;
    color: #a0a0a0;

}

 .tagline .tagline_desc {
    font-weight: bold;
    font-size: 15px;
}


#portfolio{
      background-color: #eef4f7;
}

blockquote {
    padding: 6px 16px;
    border: none;
    quotes: "\201C" "\201D";
    display: inline-block;
    position: relative;
}

blockquote:before {
    content: open-quote;
    font-weight: bold;
    position:absolute;
    top:0;
    left: 0;
}
blockquote:after {
    content: close-quote;
    font-weight: bold;
    position:absolute;
    top:0; right: 0;
}

/* --------------------------------

Navigation

-------------------------------- */
.cd-header {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 50px;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
  background-color: #030d18;
  z-index: 3;
}
@media only screen and (min-width: 768px) {
  .cd-header {
    height: 70px;
    background-color: transparent;
    box-shadow: none;
  }
}

#cd-logo {
  float: left;
  margin: 13px 0 0 5%;
}

#cd-logo a{
  font-family: Comfortaa, cursive;
  font-size: 40px;
  font-weight: 700;
  margin: 0;
  text-transform: lowercase;
}
#cd-logo img {
  display: block;
}
@media only screen and (min-width: 768px) {
  #cd-logo {
    margin: 23px 0 0 5%;
  }
}
@media only screen and (min-width: 1170px) {
  #cd-logo.is-hidden {
    /* assign a position fixed and move outside the viewport (on the left) */
    opacity: 0;
    position: fixed;
    left: -20%;
    margin-left: 0;
    -webkit-transition: left 0.3s, opacity 0.3s;
    -moz-transition: left 0.3s, opacity 0.3s;
    transition: left 0.3s, opacity 0.3s;
  }
  #cd-logo.is-hidden.slide-in {
    /* slide in when the secondary navigation gets fixed */
    left: 5%;
    opacity: 1;
  }
}

.cd-primary-nav {
  /* mobile first - navigation hidden by default, triggered by tap/click on navigation icon */
  float: right;
  margin-right: 5%;
  width: 44px;
  height: 100%;
  background: url("../img/cd-icon-menu.svg") no-repeat center center;
  background-size: 44px 44px;
}
.cd-primary-nav ul {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  -webkit-transform: translateY(-100%);
  -moz-transform: translateY(-100%);
  -ms-transform: translateY(-100%);
  -o-transform: translateY(-100%);
  transform: translateY(-100%);
}
.cd-primary-nav ul.is-visible {
  -webkit-transform: translateY(50px);
  -moz-transform: translateY(50px);
  -ms-transform: translateY(50px);
  -o-transform: translateY(50px);
  transform: translateY(50px);
}
.cd-primary-nav a {
  display: block;
  height: 50px;
  line-height: 50px;
  padding-left: 5%;
  background: #000101;
  border-top: 1px solid #051426;
  color: #f0eee1;
}
@media only screen and (min-width: 768px) {
  .cd-primary-nav {
    /* reset navigation values */
    width: auto;
    height: auto;
    background: none;
  }
  .cd-primary-nav ul {
    position: static;
    width: auto;
    -webkit-transform: translateY(0);
    -moz-transform: translateY(0);
    -ms-transform: translateY(0);
    -o-transform: translateY(0);
    transform: translateY(0);
    line-height: 70px;
  }
  .cd-primary-nav ul.is-visible {
    -webkit-transform: translateY(0);
    -moz-transform: translateY(0);
    -ms-transform: translateY(0);
    -o-transform: translateY(0);
    transform: translateY(0);
  }
  .cd-primary-nav li {
    display: inline-block;
    margin-left: 1em;
  }
  .cd-primary-nav a {
    display: inline-block;
    height: auto;
    line-height: normal;
    background: transparent;
    padding: .6em 1em;
    border-top: none;
    color: #030d18;
  }
}

/* --------------------------------

Intro

-------------------------------- */
#cd-intro {
  position: relative;
  height: 300px;
  background: url(../img/intro-bg.jpg) no-repeat center center;
  background-size: cover;
  z-index: 2;
}
#cd-intro #cd-intro-tagline {
  width: 90%;
  max-width: 1170px;
  margin: 0 auto;
  text-align: center;
  padding-top: 50px;
}
#cd-intro h1 {

  font-size: 24px;
  font-size: 1.5rem;
  font-weight: 300;
  color: #eee;
  text-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
}
@media only screen and (min-width: 768px) {
  #cd-intro {
      height: 90vh ;
  }
  #cd-intro #cd-intro-tagline {
    padding-top: 160px;
  }
  #cd-intro h1 {
    font-size: 32px;
    font-size: 2rem;
  }
}
@media only screen and (min-width: 1170px) {
  #cd-intro {
    height: 90vh ;
  }
  #cd-intro #cd-intro-tagline {
    padding-top: 250px;
  }

  #cd-intro h1 {
    font-size: 45px;
  }
}

.cd-btn {
  display: inline-block;
  padding: 1em 1.8em;
  background-color: rgba(245, 72, 74, 0.9);
  margin-top: 1em;
  border-radius: 20em;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: white;
}
.no-touch .cd-btn:hover {
  background-color: #f5484a;
}
/* ... */

